[project]
name = "langrepl"
version = "2.0.0"
description = "A powerful interactive terminal CLI for AI-powered assistance, built with Interactive command-line chat application powered by Langchain, Langgraph, Prompt Toolkit and Rich."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.4",
    "langchain-anthropic>=1.0.1",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-deepseek>=1.0.0",
    "langchain-google-genai>=3.0.1",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-prebuilt>=1.0.2",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "types-pyyaml>=6.0.12.20250915",
    "types-aiofiles>=25.1.0.20251011",
    "pytest-asyncio>=1.2.0",
    "pygments-cache>=0.1.3",
    "trafilatura>=2.0.0",
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = [
    "langchain_mcp_adapters.*",
    "pygments_cache.*"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
# Add the project root to the Python path so that tests can import from src
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "boto3-stubs[bedrock-runtime]>=1.40.64",
    "isort>=7.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pyupgrade>=3.21.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src", "resources"]

[project.scripts]
langrepl = "src.cli.bootstrap.app:cli"
lg = "src.cli.bootstrap.app:cli"
